Cleanup sidebar (Implement submit button, fix spacing/margins, configure label, change out avatar picture

--- a/src/components/elements/DropDown/DropDown.scss
+++ b/src/components/elements/DropDown/DropDown.scss
@@ -1,6 +1,6 @@
 .selectWrapper {
   bottom: 0;
-  width: 90%;
+  width: 100%;
   align-self: center;
 
   .selectCtn {
