--- a/src/components/wrappers/DonutChart/DonutChart.scss
+++ b/src/components/wrappers/DonutChart/DonutChart.scss
@@ -15,6 +15,7 @@
   .donutchart {
     border-radius: 50%;
     display: block;
+    margin: 0 auto;
     .donutchartTrack{
       fill: transparent;
     }
@@ -34,15 +35,19 @@
 }
 
 .statusCtn {
+  label {
+    margin-top: 2rem;
+    display: block;
+  }
+  select {
+    color: $black;
+    display: block;
+    width: 100%;
+    height: 40px;
 
-  .statusSelect {
-    select {
-      color: $text;
-      display: block;
-      width: 100%;
-      height: 40px;
-      margin-bottom: 20px;
-    }
+  }
+  button {
+    margin-top: 20px;
   }
   .statusMsg {
     color: $msg;
@@ -60,50 +65,5 @@
     border: 0;
     padding: 7px 14px;
     border-radius: 5px;
-  }
-
-  .nav {
-    margin-top: 50px;
-  }
-  .sidebarNav {
-    list-style: none;
-    margin: 0 -20px;
-    padding: 0;
-    background: $nav-bg;
-    li {
-    }
-    a, a:visited {
-      display: block;
-      padding: 10px 20px;
-      background: $nav-bg;
-      color: $white;
-      border: 1px solid $nav-border;
-      &:hover {
-        color: $primary;
-        background: $nav-hover;
-      }
-    }
-    a.navActive {
-      &:hover {
-        color: $white;
-      }
-    }
-    .badge {
-      display: block;
-      background: $primary;
-      color: $white;
-      float: right;
-      min-width: 10px;
-      padding: 3px 10px;
-      border-radius: 5px;
-      margin-top: -3px;
-      font-weight: bold;
-    }
-    .profileEdit {
-      display: block;
-      color: $primary;
-      float: right;
-      margin-top: -3px;
-    }
   }
 }
